@@ -2,5 +2,6 @@ This are some basic notes on hacking on merkaartor
 
 - adding amenities
 	see Map/PreDefinedTags.cpp fillAmenities
-
+- adding highways
+	set Map/PreDefinedTags.cpp fillHighway
 
